<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_text">Google Sign-In</string>
    <string name="title_textadmin">Login as Admin</string>

    <string name="loading">Loading…</string>
    <string name="app_name">REDFLAGS</string>
    <string name="app_name_homepage">Homepage</string>
    <string name="app_name_text">REDFLAGS</string>
    <string name="login_name">User Name</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="button_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_success">LoginSuccessActivity</string>
    <string name="student_name">Student Name</string>
    <string name="student_list">Student list by school</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_student_list_by_school">StudentListBySchoolActivity</string>
    <string name="title_studdb">Student Directory</string>

    <string name="title_activity_filter_student_by_school">FilterStudentBySchoolActivity</string>
    <string name="title_testtype_list">TestTypes</string>
    <string name="title_testtype_detail">TestType Detail</string>
    <string name="title_screeningtest_list">ScreeningTest</string>
    <string name="title_screeningtest_detail">ScreeningTest Detail</string>
    <string name="crawling_cross">Cross</string>
    <string name="crawling_elbow">Elbow</string>
    <string name="crawling_side">Side</string>
    <string name="crawling_dragLeft">Drag Leg Left</string>
    <string name="crawling_dragRight">Drag Leg Right</string>
    <string name="skipping_skip">Skip</string>
    <string name="skipping_gallop">Gallop</string>
    <string name="skipping_mixed">Mixed</string>
    <string name="tracking_horizontal">Horizontal</string>
    <string name="tracking_vertical">Vertical</string>
    <string name="tracking_needbeanbag">Need beanbag on head</string>
    <string name="tracking_yes">Yes</string>
    <string name="tracking_no">No</string>
    <string name="teaming_round1">Round 1</string>
    <string name="teaming_round2">Round 2</string>
    <string name="teaming_smooth">Smooth</string>
    <string name="teaming_jerky">wiggly/jerky</string>
    <string name="teaming_eyesMoved">Eyes Moved</string>
    <string name="teaming_eyesMoved_together">Together</string>
    <string name="teaming_eyesMoved_LorR">Left or Right moves</string>
    <string name="balance_eyesOpenLFoot">Eyes open left foot</string>
    <string name="balance_eyesOpenRFoot">Eyes open right foot</string>
    <string name="balance_eyesClosedLFoot">Eyes closed left foot</string>
    <string name="balance_eyesClosedRFoot">Eyes closed right foot</string>
    <string name="balance_seconds">seconds</string>
    <string name="title_activity_student_search_and_list">StudentSearchAndListActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_register_student">Registration</string>

    <string name="title_activity_student_details">StudentDetailsActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_report_tracking">RecordTrackingEyeball</string>
    <string name="title_recording">Recording Actvities</string>

    <string name="title_report_balancing">RecordBalancing</string>
    <string name="title_report_skipping">RecordSkipping</string>
    <string name="title_report_comments">RecordComments</string>
    <string name="title_view_all">ViewAllDetailsStudent</string>
    <string name="title_report_teaming">RecordTeaming</string>
    <string name="title_report_visualdiscrimination">RecordVisualDiscrimination</string>
    <string name="title_report_crawling">RecordCrawling</string>
    <string name="title_excel_sheet">ExcelSheet</string>
    <string name="title_report_type">Student Report</string>


    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_call_webservice">MainMenuActivity</string>

    <string name="hint1"><i>UserName</i></string>
    <string name="hint2"><i>Password</i></string>
    <string name="hint3"><i>Enter Student Name</i></string>
    <string name="hint4"><i>Enter Teacher Name</i></string>
    <string name="hint5"><i>Enter Student Age (1-12)</i></string>
    <string name="hint6"><i>Enter School</i></string>
    <string name="hint7"><i>Enter Grade (1-7)</i></string>
    <string name="hint8"><i>Enter date</i></string>
    <string name="hint9"><i>Enter your name</i></string>



    <string-array name="stds">
        <item>Sam Smith</item>
    </string-array>

    <string name="title_activity_dummy_list">DummyListActivity</string>
    <string name="title_activity_enregistrement_video_stack">EnregistrementVideoStackActivity</string>
    <string name="title_activity_video_capture">VideoCapture</string>

</resources>
