<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context=".Login"
    android:background="@drawable/mainbackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="321dp"
        android:background="@drawable/border"
        android:layout_gravity="right"
        android:paddingTop="50dp">

        <TextView android:id="@+id/login_id"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/login_name"/>

        <EditText android:id="@+id/login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter user name"
            android:layout_alignBottom="@+id/login_id"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/login_id"
            android:layout_toEndOf="@+id/login_id" />

        <TextView android:id="@+id/login_password"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_below="@id/login_name"
            android:text="@string/password"/>

        <EditText android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter password"
            android:inputType="textPassword"
            android:layout_alignBottom="@+id/login_password"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/login_id"
            android:layout_toEndOf="@+id/login_id"
            android:layout_below="@+id/login_id" />

        <Button android:id="@+id/button_login"
            android:layout_below="@id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:text="@string/button_login"
            android:onClick="validateLogin"/>

        <TextView android:id="@+id/forgot_password"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_below="@id/button_login"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/forgot_password"/>

    </RelativeLayout>
 </LinearLayout>
